test/expect/cmd.cc-twice.stderr.txt
^error: '--castxml-cc-<id>' may be given at most once!

Usage: castxml .*$
